# Qt-Tcp

./: CMakeLists.txt  README.md  main.cpp
controller/: CMakeLists.txt  Controller.hpp
network/: CMakeLists.txt  TcpSocket.cpp  TcpSocket.hpp
ui/: CMakeLists.txt  Window.hpp
